--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,26 +1,39 @@
 {
-    "Safety Reporting and Learning": "SP_Safety Reporting and Learning",
-    "System for Radiotherapy": "SP_System for Radiotherapy",
-    "Home": "SP_Home",
-    "Incident Reports": "SP_Incident Report",
-    "Statistical Reports": "SP_Statistical Reports",
-    "Documents & Links": "SP_Documents & Links",
-    "Process Steps": "SP_Process Steps",
-    "Admin": "SP_Admin",
-    "Manage Banner": "SP_Manage Banner",
-    "Manage Letest Update": "SP_Manage Letest Update",
-    "Manage Registration": "SP_Manage Registration",
-    "Help": "SP_Help",
-    "Register": "SP_Register",
-    "Quick Actions": "SP_Quick Actions",
-    "Search Reports": "SP_Search Reports",
-    "Submit Report": "SP_Submit Report",
-    "View Statistical Reports": "SP_View Statistical Reports",
-    "Search Documents & Links": "SP_Search Documents & Links",
-    "Browse Incidents by Process Step": "SP_Browse Incidents by Process Step",
-    "View Instructions": "SP_View Instructions",
-    "Download Reports": "SP_Download Reports",
-    "Latest Updates": "SP_Latest Updates",
-    "View all updates": "SP_View all updates",
-    "Featured Reports, Documents & Links": "SP_Featured Reports, Documents & Links"
+    "Safety Reporting and Learning": "Informes y aprendizaje de seguridad",
+    "System for Radiotherapy": "Sistema de Radioterapia",
+    "Home": "Hogar",
+    "Reports": "Informes",
+    "Incident Reports": "Informes de incidentes",
+    "Statistical Reports": "Informes estadísticos",
+    "Documents & Links": "Documentos y enlaces",
+    "Process Steps": "Los pasos del proceso",
+    "Admin": "Administrador",
+    "Manage Banner": "Administrar banner",
+    "Manage Latest Update": "Gestionar la última actualización",
+    "Manage Registration": "Gestionar registro",
+    "Help": "Ayudar",
+    "Register": "Registrarse",
+    "Quick Actions": "Acciones rápidas",
+    "Search Reports": "Informes de búsqueda",
+    "Submit Report": "Enviar reporte",
+    "View Statistical Reports": "Ver informes estadísticos",
+    "Search Documents & Links": "Buscar documentos y enlaces",
+    "Browse Incidents by Process Step": "Examinar incidentes por paso del proceso",
+    "View Instructions": "Ver instrucciones",
+    "Download Reports": "Descargar informes",
+    "Latest Updates": "Últimas actualizaciones",
+    "View all updates": "Ver todas las actualizaciones",
+    "Featured Reports, Documents & Links": "Informes, documentos y enlaces destacados",
+    "Featured Incident Reports": "Informes de incidentes destacados",
+    "Featured Documents & Links": "Documentos y enlaces destacados",
+    "Read more": "Lee mas",
+    "International Atomic Energy Agency (IAEA)": "Organismo Internacional de Energía Atómica (OIEA)",
+    "Vienna International Centre, PO Box 100, A-1400 Vienna, Austria":"Centro Internacional de Viena, PO Box 100, A-1400 Viena, Austria",
+    "Telephone": "Teléfono",
+    "E-mail": "Correo electrónico",
+    "Facsimile": "Facsímil",
+    "Contact us":"Contacta con nosotros",
+    "Disclaimer": "Descargo de responsabilidad",
+    "Copyright © 2021 International Atomic Energy Agency (IAEA). All rights reserved": "Copyright © 2021 Organismo Internacional de Energía Atómica (OIEA). Reservados todos los derechos",
+    "Version": "Versión"
 }
